--- a/build-config/conf/crosstool/gcc-4.9.2/uClibc-0.9.33.2/crosstool.powerpc-softfloat.config
+++ b/build-config/conf/crosstool/gcc-4.9.2/uClibc-0.9.33.2/crosstool.powerpc-softfloat.config
@@ -350,7 +350,7 @@ CT_CC_GCC_HAS_LIBSANITIZER=y
 # CT_CC_LANG_FORTRAN is not set
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
-CT_CC_GCC_EXTRA_CONFIG_ARRAY=""
+CT_CC_GCC_EXTRA_CONFIG_ARRAY="--enable-targets=powerpc64"
 CT_CC_GCC_STATIC_LIBSTDCXX=y
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 
