quanta_common_rglbmc: use gcc-6.3.0 and kernel-4.9.35
This machine kernel updates from 3.14.17 to 4.9.35, hence migrates gcc from 4.9.4 to 6.3.0.
Disable CONFIG_IPMI_SSIF at kernel config because of no suuport.

--- a/machine/quanta/quanta_common_rglbmc/kernel/config
+++ b/machine/quanta/quanta_common_rglbmc/kernel/config
@@ -11,6 +11,7 @@ CONFIG_IPMI_PANIC_EVENT=y
 CONFIG_IPMI_PANIC_STRING=y
 CONFIG_IPMI_DEVICE_INTERFACE=y
 CONFIG_IPMI_SI=y
+# CONFIG_IPMI_SSIF is not set
 CONFIG_IPMI_WATCHDOG=y
 CONFIG_IPMI_POWEROFF=y
 # CONFIG_SENSORS_IBMAEM is not set
