--- a/build-config/conf/kernel/4.9.35/linux.x86_64.config
+++ b/build-config/conf/kernel/4.9.35/linux.x86_64.config
@@ -865,7 +865,8 @@ CONFIG_HAVE_EBPF_JIT=y
 #
 CONFIG_UEVENT_HELPER=y
 CONFIG_UEVENT_HELPER_PATH=""
-# CONFIG_DEVTMPFS is not set
+CONFIG_DEVTMPFS=y
+CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_STANDALONE=y
 CONFIG_PREVENT_FIRMWARE_BUILD=y
 CONFIG_FW_LOADER=y
