--- a/build-config/conf/crosstool/gcc-4.9.2/uClibc-ng-1.0.22/crosstool.armv7a.config
+++ b/build-config/conf/crosstool/gcc-4.9.2/uClibc-ng-1.0.22/crosstool.armv7a.config
@@ -23,7 +23,7 @@ CT_MODULES=y
 #
 # crosstool-NG behavior
 #
-# CT_OBSOLETE is not set
+CT_OBSOLETE=y
 CT_EXPERIMENTAL=y
 # CT_ALLOW_BUILD_AS_ROOT is not set
 # CT_DEBUG_CT is not set
@@ -178,7 +178,6 @@ CT_ARCH_ARM_MODE="arm"
 CT_ARCH_ARM_MODE_ARM=y
 # CT_ARCH_ARM_MODE_THUMB is not set
 # CT_ARCH_ARM_INTERWORKING is not set
-CT_ARCH_ARM_EABI_FORCE=y
 CT_ARCH_ARM_EABI=y
 
 #
@@ -188,7 +187,6 @@ CT_ARCH_ARM_EABI=y
 #
 # General toolchain options
 #
-CT_FORCE_SYSROOT=y
 CT_USE_SYSROOT=y
 CT_SYSROOT_NAME="sysroot"
 CT_SYSROOT_DIR_PREFIX=""
@@ -266,15 +264,14 @@ CT_BINUTILS_binutils=y
 # GNU binutils
 #
 # CT_BINUTILS_CUSTOM is not set
-CT_BINUTILS_VERSION="2.28"
+CT_BINUTILS_VERSION="2.24"
 # CT_BINUTILS_SHOW_LINARO is not set
-CT_BINUTILS_V_2_28=y
+# CT_BINUTILS_V_2_28 is not set
 # CT_BINUTILS_V_2_27 is not set
 # CT_BINUTILS_V_2_26 is not set
-CT_BINUTILS_2_27_or_later=y
-CT_BINUTILS_2_26_or_later=y
-CT_BINUTILS_2_25_1_or_later=y
-CT_BINUTILS_2_25_or_later=y
+# CT_BINUTILS_V_2_25_1 is not set
+CT_BINUTILS_V_2_24=y
+# CT_BINUTILS_V_2_23_2 is not set
 CT_BINUTILS_2_24_or_later=y
 CT_BINUTILS_2_23_2_or_later=y
 CT_BINUTILS_HAS_HASH_STYLE=y
@@ -317,6 +314,9 @@ CT_LIBC_none_AVAILABLE=y
 CT_LIBC_uClibc_AVAILABLE=y
 # CT_LIBC_UCLIBC_CUSTOM is not set
 CT_LIBC_UCLIBC_NG_V_1_0_22=y
+# CT_LIBC_UCLIBC_NG_V_1_0_21 is not set
+# CT_LIBC_UCLIBC_NG_V_1_0_20 is not set
+# CT_LIBC_UCLIBC_V_0_9_33_2 is not set
 CT_LIBC_UCLIBC_NG_1_0_15_or_later=y
 CT_LIBC_UCLIBC_NG_1_0_0_or_later=y
 CT_LIBC_UCLIBC_0_9_33_2_or_later=y
@@ -365,15 +365,20 @@ CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_CORE_PASS_1_NEEDED=y
 CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
-# CT_CC_GCC_CUSTOM is not set
-CT_CC_GCC_VERSION="4.9.4"
-# CT_CC_GCC_SHOW_LINARO is not set
+CT_CC_GCC_CUSTOM=y
+CT_CC_GCC_CUSTOM_LOCATION="${DOWNLOADDIR}/gcc-${GCC_VERSION}.tar.bz2"
+CT_CC_GCC_CUSTOM_VERSION="${GCC_VERSION}"
+CT_CC_GCC_VERSION="${GCC_VERSION}"
 # CT_CC_GCC_V_6_3_0 is not set
 # CT_CC_GCC_V_5_4_0 is not set
-CT_CC_GCC_V_4_9_4=y
+# CT_CC_GCC_V_4_9_4 is not set
+# CT_CC_GCC_V_4_8_5 is not set
 CT_CC_GCC_4_8_or_later=y
-CT_CC_GCC_4_9=y
 CT_CC_GCC_4_9_or_later=y
+CT_CC_GCC_5_or_later=y
+CT_CC_GCC_6_or_later=y
+CT_CC_GCC_latest=y
+CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
 CT_CC_GCC_EXTRA_CONFIG_ARRAY=""
@@ -458,10 +463,30 @@ CT_GDB_GDBSERVER_HAS_IPA_LIB=y
 # gdb version
 #
 # CT_GDB_CUSTOM is not set
-CT_GDB_VERSION="7.12.1"
-CT_GDB_V_7_12_1=y
-# CT_GDB_V_7_11_1 is not set
-CT_GDB_7_12_or_later=y
+CT_GDB_VERSION="7.11.1"
+# CT_DEBUG_GDB_SHOW_LINARO is not set
+# CT_GDB_V_7_12_1 is not set
+CT_GDB_V_7_11_1=y
+# CT_GDB_V_7_10_1 is not set
+# CT_GDB_V_7_10 is not set
+# CT_GDB_V_7_9_1 is not set
+# CT_GDB_V_7_9 is not set
+# CT_GDB_V_7_8_2 is not set
+# CT_GDB_V_7_8_1 is not set
+# CT_GDB_V_7_8 is not set
+# CT_GDB_V_7_7_1 is not set
+# CT_GDB_V_7_7 is not set
+# CT_GDB_V_7_6_1 is not set
+# CT_GDB_V_7_5_1 is not set
+# CT_GDB_V_7_4_1 is not set
+# CT_GDB_V_7_4 is not set
+# CT_GDB_V_7_3_1 is not set
+# CT_GDB_V_7_3a is not set
+# CT_GDB_V_7_2a is not set
+# CT_GDB_V_7_1a is not set
+# CT_GDB_V_7_0_1a is not set
+# CT_GDB_V_7_0a is not set
+# CT_GDB_V_6_8a is not set
 CT_GDB_7_2_or_later=y
 CT_GDB_7_0_or_later=y
 CT_GDB_HAS_PKGVERSION_BUGURL=y
@@ -469,11 +494,24 @@ CT_GDB_HAS_PYTHON=y
 CT_GDB_INSTALL_GDBINIT=y
 CT_DEBUG_ltrace=y
 CT_LTRACE_V_0_7_3=y
+# CT_LTRACE_V_0_5_3 is not set
 CT_LTRACE_VERSION="0.7.3"
 CT_DEBUG_strace=y
-CT_STRACE_V_4_16=y
+# CT_STRACE_V_4_16 is not set
 # CT_STRACE_V_4_15 is not set
-CT_STRACE_VERSION="4.16"
+# CT_STRACE_V_4_14 is not set
+# CT_STRACE_V_4_13 is not set
+# CT_STRACE_V_4_12 is not set
+# CT_STRACE_V_4_11 is not set
+# CT_STRACE_V_4_10 is not set
+CT_STRACE_V_4_9=y
+# CT_STRACE_V_4_8 is not set
+# CT_STRACE_V_4_7 is not set
+# CT_STRACE_V_4_6 is not set
+# CT_STRACE_V_4_5_20 is not set
+# CT_STRACE_V_4_5_19 is not set
+# CT_STRACE_V_4_5_18 is not set
+CT_STRACE_VERSION="4.9"
 
 #
 # Companion libraries
@@ -484,7 +522,6 @@ CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
-CT_CLOOG_NEEDED=y
 CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
@@ -494,7 +531,6 @@ CT_GETTEXT=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
-CT_CLOOG=y
 CT_MPC=y
 CT_LIBELF_TARGET=y
 CT_EXPAT=y
@@ -504,34 +540,58 @@ CT_LIBICONV_V_1_15=y
 # CT_LIBICONV_V_1_14 is not set
 CT_LIBICONV_VERSION="1.15"
 CT_GETTEXT_V_0_19_8_1=y
+# CT_GETTEXT_V_0_19_7 is not set
 CT_GETTEXT_VERSION="0.19.8.1"
-CT_GMP_V_6_1_2=y
+# CT_GMP_V_6_1_2 is not set
+# CT_GMP_V_6_1_0 is not set
+CT_GMP_V_6_0_0=y
+# CT_GMP_V_5_1_3 is not set
+# CT_GMP_V_5_1_1 is not set
+# CT_GMP_V_5_0_2 is not set
+# CT_GMP_V_5_0_1 is not set
+# CT_GMP_V_4_3_2 is not set
+# CT_GMP_V_4_3_1 is not set
+# CT_GMP_V_4_3_0 is not set
 CT_GMP_5_0_2_or_later=y
-CT_GMP_VERSION="6.1.2"
-CT_MPFR_V_3_1_5=y
-CT_MPFR_VERSION="3.1.5"
+CT_GMP_VERSION="6.0.0a"
+# CT_MPFR_V_3_1_5 is not set
+# CT_MPFR_V_3_1_3 is not set
+CT_MPFR_V_3_1_2=y
+# CT_MPFR_V_3_1_0 is not set
+# CT_MPFR_V_3_0_1 is not set
+# CT_MPFR_V_3_0_0 is not set
+# CT_MPFR_V_2_4_2 is not set
+# CT_MPFR_V_2_4_1 is not set
+# CT_MPFR_V_2_4_0 is not set
+CT_MPFR_VERSION="3.1.2"
 # CT_ISL_V_0_18 is not set
 # CT_ISL_V_0_17_1 is not set
 # CT_ISL_V_0_16_1 is not set
-CT_ISL_V_0_15=y
-CT_ISL_V_0_15_or_later=y
-CT_ISL_V_0_14_or_later=y
+# CT_ISL_V_0_15 is not set
+# CT_ISL_V_0_14 is not set
+CT_ISL_V_0_12_2=y
 CT_ISL_V_0_12_or_later=y
-CT_ISL_VERSION="0.15"
-CT_CLOOG_V_0_18_4=y
-CT_CLOOG_VERSION="0.18.4"
-CT_CLOOG_0_18_4_or_later=y
-CT_CLOOG_0_18_or_later=y
-CT_MPC_V_1_0_3=y
-CT_MPC_VERSION="1.0.3"
+CT_ISL_VERSION="0.12.2"
+# CT_CLOOG_V_0_18_4 is not set
+# CT_MPC_V_1_0_3 is not set
+CT_MPC_V_1_0_2=y
+# CT_MPC_V_1_0_1 is not set
+# CT_MPC_V_1_0 is not set
+# CT_MPC_V_0_9 is not set
+# CT_MPC_V_0_8_2 is not set
+# CT_MPC_V_0_8_1 is not set
+# CT_MPC_V_0_7 is not set
+CT_MPC_VERSION="1.0.2"
 
 #
 # libelf version needed to build for target
 #
 CT_LIBELF_V_0_8_13=y
+# CT_LIBELF_V_0_8_12 is not set
 CT_LIBELF_VERSION="0.8.13"
-CT_EXPAT_V_2_2_0=y
-CT_EXPAT_VERSION="2.2.0"
+# CT_EXPAT_V_2_2_0 is not set
+CT_EXPAT_V_2_1_1=y
+CT_EXPAT_VERSION="2.1.1"
 CT_NCURSES_V_6_0=y
 CT_NCURSES_VERSION="6.0"
 # CT_NCURSES_NEW_ABI is not set
@@ -553,18 +613,27 @@ CT_NCURSES_TARGET_FALLBACKS=""
 # CT_COMP_TOOLS_FOR_HOST is not set
 CT_COMP_TOOLS_autoconf=y
 CT_AUTOCONF_V_2_69=y
+# CT_AUTOCONF_V_2_65 is not set
 CT_AUTOCONF_VERSION="2.69"
 CT_COMP_TOOLS_automake=y
 CT_AUTOMAKE_V_1_15=y
+# CT_AUTOMAKE_V_1_14 is not set
+# CT_AUTOMAKE_V_1_11_6 is not set
+# CT_AUTOMAKE_V_1_11_1 is not set
 CT_AUTOMAKE_VERSION="1.15"
 CT_COMP_TOOLS_libtool=y
 CT_LIBTOOL_V_2_4_6=y
 CT_LIBTOOL_VERSION="2.4.6"
 CT_COMP_TOOLS_m4=y
 CT_M4_V_1_4_18=y
+# CT_M4_V_1_4_17 is not set
+# CT_M4_V_1_4_13 is not set
 CT_M4_VERSION="1.4.18"
 CT_COMP_TOOLS_make=y
 CT_MAKE_V_4_2_1=y
+# CT_MAKE_V_4_1 is not set
+# CT_MAKE_V_4_0 is not set
+# CT_MAKE_V_3_81 is not set
 # CT_MAKE_GMAKE_SYMLINK is not set
 CT_MAKE_VERSION="4.2.1"
 
