--- a/build-config/conf/crosstool/gcc-4.9.2/uClibc-ng-1.0.22/crosstool.powerpc-softfloat.config
+++ b/build-config/conf/crosstool/gcc-4.9.2/uClibc-ng-1.0.22/crosstool.powerpc-softfloat.config
@@ -23,8 +23,9 @@ CT_MODULES=y
 #
 # crosstool-NG behavior
 #
-# CT_OBSOLETE is not set
-# CT_EXPERIMENTAL is not set
+CT_OBSOLETE=y
+CT_EXPERIMENTAL=y
+# CT_ALLOW_BUILD_AS_ROOT is not set
 # CT_DEBUG_CT is not set
 
 #
@@ -101,18 +102,19 @@ CT_LOG_FILE_COMPRESS=y
 #
 # Target options
 #
-CT_ARCH="x86"
+CT_ARCH="powerpc"
 # CT_ARCH_alpha is not set
 # CT_ARCH_arm is not set
 # CT_ARCH_avr is not set
 # CT_ARCH_m68k is not set
+# CT_ARCH_microblaze is not set
 # CT_ARCH_mips is not set
 # CT_ARCH_nios2 is not set
-# CT_ARCH_powerpc is not set
+CT_ARCH_powerpc=y
 # CT_ARCH_s390 is not set
 # CT_ARCH_sh is not set
 # CT_ARCH_sparc is not set
-CT_ARCH_x86=y
+# CT_ARCH_x86 is not set
 # CT_ARCH_xtensa is not set
 CT_ARCH_alpha_AVAILABLE=y
 CT_ARCH_arm_AVAILABLE=y
@@ -135,25 +137,41 @@ CT_ARCH_SUFFIX=""
 # CT_MULTILIB is not set
 CT_DEMULTILIB=y
 CT_ARCH_USE_MMU=y
+CT_ARCH_SUPPORTS_BOTH_ENDIAN=y
+CT_ARCH_DEFAULT_BE=y
+CT_ARCH_BE=y
+# CT_ARCH_LE is not set
+CT_ARCH_ENDIAN="big"
 CT_ARCH_SUPPORTS_32=y
 CT_ARCH_SUPPORTS_64=y
 CT_ARCH_DEFAULT_32=y
-CT_ARCH_BITNESS=64
-# CT_ARCH_32 is not set
-CT_ARCH_64=y
+CT_ARCH_BITNESS=32
+CT_ARCH_32=y
+# CT_ARCH_64 is not set
 
 #
 # Target optimisations
 #
-CT_ARCH_SUPPORTS_WITH_ARCH=y
+CT_ARCH_SUPPORTS_WITH_ABI=y
 CT_ARCH_SUPPORTS_WITH_CPU=y
 CT_ARCH_SUPPORTS_WITH_TUNE=y
-CT_ARCH_ARCH=""
+CT_ARCH_SUPPORTS_WITH_FLOAT=y
+CT_ARCH_ABI=""
 CT_ARCH_CPU=""
 CT_ARCH_TUNE=""
+# CT_ARCH_FLOAT_AUTO is not set
+# CT_ARCH_FLOAT_HW is not set
+CT_ARCH_FLOAT_SW=y
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
-CT_ARCH_FLOAT=""
+CT_ARCH_FLOAT="soft"
+
+#
+# powerpc other options
+#
+CT_ARCH_powerpc_ABI=""
+CT_ARCH_powerpc_ABI_DEFAULT=y
+# CT_ARCH_powerpc_ABI_SPE is not set
 
 #
 # Toolchain options
@@ -162,7 +180,6 @@ CT_ARCH_FLOAT=""
 #
 # General toolchain options
 #
-CT_FORCE_SYSROOT=y
 CT_USE_SYSROOT=y
 CT_SYSROOT_NAME="sysroot"
 CT_SYSROOT_DIR_PREFIX=""
@@ -177,12 +194,14 @@ CT_TOOLCHAIN_BUGURL=""
 #
 CT_TARGET_VENDOR="onie"
 CT_TARGET_ALIAS_SED_EXPR=""
-CT_TARGET_ALIAS="x86_64"
+CT_TARGET_ALIAS="powerpc-softfloat"
 
 #
 # Toolchain type
 #
+# CT_NATIVE is not set
 CT_CROSS=y
+# CT_CROSS_NATIVE is not set
 # CT_CANADIAN is not set
 CT_TOOLCHAIN_TYPE="cross"
 
@@ -237,31 +256,26 @@ CT_BINUTILS_binutils=y
 #
 # GNU binutils
 #
-CT_BINUTILS_VERSION="2.28"
+# CT_BINUTILS_CUSTOM is not set
+CT_BINUTILS_VERSION="2.24"
 # CT_BINUTILS_SHOW_LINARO is not set
-CT_BINUTILS_V_2_28=y
+# CT_BINUTILS_V_2_28 is not set
 # CT_BINUTILS_V_2_27 is not set
 # CT_BINUTILS_V_2_26 is not set
-CT_BINUTILS_2_27_or_later=y
-CT_BINUTILS_2_26_or_later=y
-CT_BINUTILS_2_25_1_or_later=y
-CT_BINUTILS_2_25_or_later=y
+# CT_BINUTILS_V_2_25_1 is not set
+CT_BINUTILS_V_2_24=y
+# CT_BINUTILS_V_2_23_2 is not set
 CT_BINUTILS_2_24_or_later=y
 CT_BINUTILS_2_23_2_or_later=y
 CT_BINUTILS_HAS_HASH_STYLE=y
 CT_BINUTILS_HAS_GOLD=y
-CT_BINUTILS_GOLD_SUPPORTS_ARCH=y
-CT_BINUTILS_GOLD_SUPPORT=y
 CT_BINUTILS_HAS_PLUGINS=y
 CT_BINUTILS_HAS_PKGVERSION_BUGURL=y
 CT_BINUTILS_LINKER_LD=y
-# CT_BINUTILS_LINKER_GOLD is not set
-# CT_BINUTILS_LINKER_LD_GOLD is not set
-# CT_BINUTILS_LINKER_GOLD_LD is not set
 CT_BINUTILS_LINKERS_LIST="ld"
 CT_BINUTILS_LINKER_DEFAULT="bfd"
 # CT_BINUTILS_PLUGINS is not set
-CT_BINUTILS_EXTRA_CONFIG_ARRAY=""
+CT_BINUTILS_EXTRA_CONFIG_ARRAY="--enable-64-bit-bfd"
 CT_BINUTILS_FOR_TARGET=y
 CT_BINUTILS_FOR_TARGET_IBERTY=y
 CT_BINUTILS_FOR_TARGET_BFD=y
@@ -276,6 +290,7 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 CT_LIBC="uClibc"
 CT_LIBC_VERSION="1.0.22"
 # CT_LIBC_glibc is not set
+# CT_LIBC_musl is not set
 CT_LIBC_uClibc=y
 CT_LIBC_avr_libc_AVAILABLE=y
 CT_LIBC_glibc_AVAILABLE=y
@@ -285,7 +300,11 @@ CT_LIBC_musl_AVAILABLE=y
 CT_LIBC_newlib_AVAILABLE=y
 CT_LIBC_none_AVAILABLE=y
 CT_LIBC_uClibc_AVAILABLE=y
+# CT_LIBC_UCLIBC_CUSTOM is not set
 CT_LIBC_UCLIBC_NG_V_1_0_22=y
+# CT_LIBC_UCLIBC_NG_V_1_0_21 is not set
+# CT_LIBC_UCLIBC_NG_V_1_0_20 is not set
+# CT_LIBC_UCLIBC_V_0_9_33_2 is not set
 CT_LIBC_UCLIBC_NG_1_0_15_or_later=y
 CT_LIBC_UCLIBC_NG_1_0_0_or_later=y
 CT_LIBC_UCLIBC_0_9_33_2_or_later=y
@@ -333,17 +352,23 @@ CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_CORE_PASS_1_NEEDED=y
 CT_CC_CORE_PASS_2_NEEDED=y
 CT_CC_gcc=y
-CT_CC_GCC_VERSION="4.9.4"
-# CT_CC_GCC_SHOW_LINARO is not set
+CT_CC_GCC_CUSTOM=y
+CT_CC_GCC_CUSTOM_LOCATION="${DOWNLOADDIR}/gcc-${GCC_VERSION}.tar.bz2"
+CT_CC_GCC_CUSTOM_VERSION="${GCC_VERSION}"
+CT_CC_GCC_VERSION="${GCC_VERSION}"
 # CT_CC_GCC_V_6_3_0 is not set
 # CT_CC_GCC_V_5_4_0 is not set
-CT_CC_GCC_V_4_9_4=y
+# CT_CC_GCC_V_4_9_4 is not set
+# CT_CC_GCC_V_4_8_5 is not set
 CT_CC_GCC_4_8_or_later=y
-CT_CC_GCC_4_9=y
 CT_CC_GCC_4_9_or_later=y
+CT_CC_GCC_5_or_later=y
+CT_CC_GCC_6_or_later=y
+CT_CC_GCC_latest=y
+CT_CC_GCC_HAS_LIBMPX=y
 CT_CC_GCC_ENABLE_CXX_FLAGS=""
 CT_CC_GCC_CORE_EXTRA_CONFIG_ARRAY=""
-CT_CC_GCC_EXTRA_CONFIG_ARRAY=""
+CT_CC_GCC_EXTRA_CONFIG_ARRAY="--enable-targets=powerpc64"
 CT_CC_GCC_STATIC_LIBSTDCXX=y
 # CT_CC_GCC_SYSTEM_ZLIB is not set
 CT_CC_GCC_CONFIG_TLS=m
@@ -394,6 +419,11 @@ CT_CC_SUPPORT_GOLANG=y
 CT_CC_LANG_CXX=y
 # CT_CC_LANG_FORTRAN is not set
 # CT_CC_LANG_JAVA is not set
+# CT_CC_LANG_ADA is not set
+# CT_CC_LANG_OBJC is not set
+# CT_CC_LANG_OBJCXX is not set
+# CT_CC_LANG_GOLANG is not set
+CT_CC_LANG_OTHERS=""
 
 #
 # Debug facilities
@@ -413,15 +443,37 @@ CT_GDB_CROSS_EXTRA_CONFIG_ARRAY=""
 # CT_GDB_NATIVE is not set
 CT_GDB_GDBSERVER=y
 CT_GDB_GDBSERVER_HAS_IPA_LIB=y
-CT_GDB_GDBSERVER_BUILD_IPA_LIB=y
+# CT_GDB_GDBSERVER_STATIC is not set
+# CT_GDB_GDBSERVER_BUILD_IPA_LIB is not set
 
 #
 # gdb version
 #
-CT_GDB_VERSION="7.12.1"
-CT_GDB_V_7_12_1=y
-# CT_GDB_V_7_11_1 is not set
-CT_GDB_7_12_or_later=y
+# CT_GDB_CUSTOM is not set
+CT_GDB_VERSION="7.11.1"
+# CT_DEBUG_GDB_SHOW_LINARO is not set
+# CT_GDB_V_7_12_1 is not set
+CT_GDB_V_7_11_1=y
+# CT_GDB_V_7_10_1 is not set
+# CT_GDB_V_7_10 is not set
+# CT_GDB_V_7_9_1 is not set
+# CT_GDB_V_7_9 is not set
+# CT_GDB_V_7_8_2 is not set
+# CT_GDB_V_7_8_1 is not set
+# CT_GDB_V_7_8 is not set
+# CT_GDB_V_7_7_1 is not set
+# CT_GDB_V_7_7 is not set
+# CT_GDB_V_7_6_1 is not set
+# CT_GDB_V_7_5_1 is not set
+# CT_GDB_V_7_4_1 is not set
+# CT_GDB_V_7_4 is not set
+# CT_GDB_V_7_3_1 is not set
+# CT_GDB_V_7_3a is not set
+# CT_GDB_V_7_2a is not set
+# CT_GDB_V_7_1a is not set
+# CT_GDB_V_7_0_1a is not set
+# CT_GDB_V_7_0a is not set
+# CT_GDB_V_6_8a is not set
 CT_GDB_7_2_or_later=y
 CT_GDB_7_0_or_later=y
 CT_GDB_HAS_PKGVERSION_BUGURL=y
@@ -429,11 +481,24 @@ CT_GDB_HAS_PYTHON=y
 CT_GDB_INSTALL_GDBINIT=y
 CT_DEBUG_ltrace=y
 CT_LTRACE_V_0_7_3=y
+# CT_LTRACE_V_0_5_3 is not set
 CT_LTRACE_VERSION="0.7.3"
 CT_DEBUG_strace=y
-CT_STRACE_V_4_16=y
+# CT_STRACE_V_4_16 is not set
 # CT_STRACE_V_4_15 is not set
-CT_STRACE_VERSION="4.16"
+# CT_STRACE_V_4_14 is not set
+# CT_STRACE_V_4_13 is not set
+# CT_STRACE_V_4_12 is not set
+# CT_STRACE_V_4_11 is not set
+# CT_STRACE_V_4_10 is not set
+CT_STRACE_V_4_9=y
+# CT_STRACE_V_4_8 is not set
+# CT_STRACE_V_4_7 is not set
+# CT_STRACE_V_4_6 is not set
+# CT_STRACE_V_4_5_20 is not set
+# CT_STRACE_V_4_5_19 is not set
+# CT_STRACE_V_4_5_18 is not set
+CT_STRACE_VERSION="4.9"
 
 #
 # Companion libraries
@@ -444,7 +509,6 @@ CT_GETTEXT_NEEDED=y
 CT_GMP_NEEDED=y
 CT_MPFR_NEEDED=y
 CT_ISL_NEEDED=y
-CT_CLOOG_NEEDED=y
 CT_MPC_NEEDED=y
 CT_EXPAT_NEEDED=y
 CT_NCURSES_NEEDED=y
@@ -454,7 +518,6 @@ CT_GETTEXT=y
 CT_GMP=y
 CT_MPFR=y
 CT_ISL=y
-CT_CLOOG=y
 CT_MPC=y
 CT_LIBELF_TARGET=y
 CT_EXPAT=y
@@ -464,34 +527,63 @@ CT_LIBICONV_V_1_15=y
 # CT_LIBICONV_V_1_14 is not set
 CT_LIBICONV_VERSION="1.15"
 CT_GETTEXT_V_0_19_8_1=y
+# CT_GETTEXT_V_0_19_7 is not set
 CT_GETTEXT_VERSION="0.19.8.1"
-CT_GMP_V_6_1_2=y
+# CT_GMP_V_6_1_2 is not set
+# CT_GMP_V_6_1_0 is not set
+CT_GMP_V_6_0_0=y
+# CT_GMP_V_5_1_3 is not set
+# CT_GMP_V_5_1_1 is not set
+# CT_GMP_V_5_0_2 is not set
+# CT_GMP_V_5_0_1 is not set
+# CT_GMP_V_4_3_2 is not set
+# CT_GMP_V_4_3_1 is not set
+# CT_GMP_V_4_3_0 is not set
 CT_GMP_5_0_2_or_later=y
-CT_GMP_VERSION="6.1.2"
-CT_MPFR_V_3_1_5=y
-CT_MPFR_VERSION="3.1.5"
+CT_GMP_VERSION="6.0.0a"
+# CT_MPFR_V_3_1_5 is not set
+# CT_MPFR_V_3_1_3 is not set
+CT_MPFR_V_3_1_2=y
+# CT_MPFR_V_3_1_0 is not set
+# CT_MPFR_V_3_0_1 is not set
+# CT_MPFR_V_3_0_0 is not set
+# CT_MPFR_V_2_4_2 is not set
+# CT_MPFR_V_2_4_1 is not set
+# CT_MPFR_V_2_4_0 is not set
+CT_MPFR_VERSION="3.1.2"
+# CT_ISL_V_0_18 is not set
+# CT_ISL_V_0_17_1 is not set
 # CT_ISL_V_0_16_1 is not set
-CT_ISL_V_0_15=y
-CT_ISL_V_0_15_or_later=y
-CT_ISL_V_0_14_or_later=y
+# CT_ISL_V_0_15 is not set
+# CT_ISL_V_0_14 is not set
+CT_ISL_V_0_12_2=y
 CT_ISL_V_0_12_or_later=y
-CT_ISL_VERSION="0.15"
-CT_CLOOG_V_0_18_4=y
-CT_CLOOG_VERSION="0.18.4"
-CT_CLOOG_0_18_4_or_later=y
-CT_CLOOG_0_18_or_later=y
-CT_MPC_V_1_0_3=y
-CT_MPC_VERSION="1.0.3"
+CT_ISL_VERSION="0.12.2"
+# CT_CLOOG_V_0_18_4 is not set
+# CT_CLOOG_V_0_18_1 is not set
+# CT_CLOOG_V_0_18_0 is not set
+# CT_MPC_V_1_0_3 is not set
+CT_MPC_V_1_0_2=y
+# CT_MPC_V_1_0_1 is not set
+# CT_MPC_V_1_0 is not set
+# CT_MPC_V_0_9 is not set
+# CT_MPC_V_0_8_2 is not set
+# CT_MPC_V_0_8_1 is not set
+# CT_MPC_V_0_7 is not set
+CT_MPC_VERSION="1.0.2"
 
 #
 # libelf version needed to build for target
 #
 CT_LIBELF_V_0_8_13=y
+# CT_LIBELF_V_0_8_12 is not set
 CT_LIBELF_VERSION="0.8.13"
-CT_EXPAT_V_2_2_0=y
-CT_EXPAT_VERSION="2.2.0"
+# CT_EXPAT_V_2_2_0 is not set
+CT_EXPAT_V_2_1_1=y
+CT_EXPAT_VERSION="2.1.1"
 CT_NCURSES_V_6_0=y
 CT_NCURSES_VERSION="6.0"
+# CT_NCURSES_NEW_ABI is not set
 CT_NCURSES_HOST_CONFIG_ARGS=""
 CT_NCURSES_HOST_DISABLE_DB=y
 CT_NCURSES_HOST_FALLBACKS="linux,xterm,xterm-color,xterm-256color,vt100"
@@ -510,17 +602,31 @@ CT_NCURSES_TARGET_FALLBACKS=""
 # CT_COMP_TOOLS_FOR_HOST is not set
 CT_COMP_TOOLS_autoconf=y
 CT_AUTOCONF_V_2_69=y
+# CT_AUTOCONF_V_2_65 is not set
 CT_AUTOCONF_VERSION="2.69"
 CT_COMP_TOOLS_automake=y
 CT_AUTOMAKE_V_1_15=y
+# CT_AUTOMAKE_V_1_14 is not set
+# CT_AUTOMAKE_V_1_11_6 is not set
+# CT_AUTOMAKE_V_1_11_1 is not set
 CT_AUTOMAKE_VERSION="1.15"
 CT_COMP_TOOLS_libtool=y
 CT_LIBTOOL_V_2_4_6=y
 CT_LIBTOOL_VERSION="2.4.6"
 CT_COMP_TOOLS_m4=y
 CT_M4_V_1_4_18=y
+# CT_M4_V_1_4_17 is not set
+# CT_M4_V_1_4_13 is not set
 CT_M4_VERSION="1.4.18"
 CT_COMP_TOOLS_make=y
 CT_MAKE_V_4_2_1=y
+# CT_MAKE_V_4_1 is not set
+# CT_MAKE_V_4_0 is not set
+# CT_MAKE_V_3_81 is not set
 # CT_MAKE_GMAKE_SYMLINK is not set
 CT_MAKE_VERSION="4.2.1"
+
+#
+# Test suite
+#
+# CT_TEST_SUITE_GCC is not set
