busybox: enable i2c tools if I2CTOOLS_ENABLE=y
Recently the i2c tools have been ported to busybox.  The patch
will use the ones in busybox instead of in i2c-tools if
`I2CTOOLS_ENABLE` is enabled.

Now, i2c-tools will be built only if `I2CTOOLS_SYSEEPROM` (deprecated)
is enabled.

Using the tools in busybox will reduce a bit of image size compares
to i2c-tools.

The patch has been tested in Accton AS7712_32X.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -376,7 +376,7 @@ ifeq ($(UEFI_ENABLE),yes)
   include make/efivar.make
   include make/efibootmgr.make
 endif
-ifeq ($(I2CTOOLS_ENABLE),yes)
+ifeq ($(I2CTOOLS_SYSEEPROM),yes)
   include make/i2ctools.make
 endif
 ifeq ($(DMIDECODE_ENABLE),yes)
