imt: add support for newer intel igb driver.
Congatec ComX TAC3 uses Intel I210 Gigabit Ethernet controller.
Current igb driver in ONIE kernel doesn't have support for it.
Fix it similar as other vendors do by applying patch to igb driver
using latest igb sources from Intel.
In turn Interface Masters need support for igb and e1000/e drivers
simultaneously as we support different HW by one ONIE image.

Signed-off-by: Vitaliy Ivanov <vitaliyi@interfacemasters.com>

--- a/machine/imt/im_n29xx_t40n/kernel/config
+++ b/machine/imt/im_n29xx_t40n/kernel/config
@@ -1,3 +1,6 @@
 CONFIG_FIRMWARE_IN_KERNEL=y
 CONFIG_EXTRA_FIRMWARE="rtl_nic/rtl8168e-2.fw"
 CONFIG_EXTRA_FIRMWARE_DIR="firmware"
+CONFIG_IGB=y
+CONFIG_E1000=y
+CONFIG_E1000E=y
