Add ONIE of AG5648.
Remove no use patch.

modify AG9032v1 VENDOR_VERSION.

Signed-off-by: johnson.lu <johnson.lu@deltaww.com>

--- a/machine/delta/delta_ag5648/installer.conf
+++ b/machine/delta/delta_ag5648/installer.conf
@@ -1,7 +1,7 @@
-# Delta ag9032v1
+# Delta ag5648
 # CPU Module: Intel Broadwell
 
-description="DNI AG9032V1_CU with Intel Atom Rangeley CPU Module"
+description="DNI AG5648_CU with Intel Atom Rangeley CPU Module"
 
 # Default ONIE block device
 install_device_platform()
