fix installer.conf comment error.
Signed-off-by: johnson.lu <johnson.lu@deltaww.com>

--- a/machine/delta/delta_ag5648/installer.conf
+++ b/machine/delta/delta_ag5648/installer.conf
@@ -1,5 +1,5 @@
 # Delta ag5648
-# CPU Module: Intel Broadwell
+# CPU Module: Intel Rangeley
 
 description="DNI AG5648_CU with Intel Atom Rangeley CPU Module"
 
