inventec_d6254qs: Move to kernel 4.9.57
Track the new default ONIE kernel version ang gcc version, and modify patchs to fit new version.

--- a/machine/inventec/inventec_d6254qs/kernel/config
+++ b/machine/inventec/inventec_d6254qs/kernel/config
@@ -9,6 +9,8 @@ CONFIG_I2C_GPIO=y
 CONFIG_GPIO_ICH=y
 CONFIG_LPC_ICH=y
 CONFIG_INVENTEC_MAGNOLIA=y
+CONFIG_I2C_ISCH=n
+CONFIG_I2C_ISMT=n
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_KPROBES is not set
 # CONFIG_MODULE_SRCVERSION_ALL is not set
