Add mokutil-0.3.0 binary
This patch adds mokutil-0.3.0 with recent patches to the sysroot
image.  To enable building openssl add this to machine.make:

  MOKUTIL_ENABLE = yes

This utility is used to manipulate the "Machine Owner Key" database
for secure boot systems.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -338,6 +338,7 @@ ifeq ($(SECURE_BOOT_ENABLE),yes)
   PESIGN_ENABLE = yes
   GNU_EFI_ENABLE = yes
   OPENSSL_ENABLE = yes
+  MOKUTIL_ENABLE = yes
 endif
 
 include make/kernel-download.make
@@ -421,6 +422,9 @@ ifeq ($(GNU_EFI_ENABLE),yes)
 endif
 ifeq ($(OPENSSL_ENABLE),yes)
   include make/openssl.make
+endif
+ifeq ($(MOKUTIL_ENABLE),yes)
+  include make/mokutil.make
 endif
 include make/images.make
 include make/demo.make
