x86_64: add kernel support for USB_XHCI and USB_OHCI
Enable kernel support for USB_XHCI and USB_OHCI type controllers.

USB_XHCI is for USB-3.0, found on newer hardware.

USB_OHCI is for USB-1.1, found on older hardware.

These should have been enabled a long time ago as they are quite
common.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/conf/kernel/4.9.80/linux.x86_64.config
+++ b/build-config/conf/kernel/4.9.80/linux.x86_64.config
@@ -2159,7 +2159,9 @@ CONFIG_USB_DEFAULT_PERSIST=y
 # USB Host Controller Drivers
 #
 # CONFIG_USB_C67X00_HCD is not set
-# CONFIG_USB_XHCI_HCD is not set
+CONFIG_USB_XHCI_HCD=y
+CONFIG_USB_XHCI_PCI=y
+# CONFIG_USB_XHCI_PLATFORM is not set
 CONFIG_USB_EHCI_HCD=y
 CONFIG_USB_EHCI_ROOT_HUB_TT=y
 CONFIG_USB_EHCI_TT_NEWSCHED=y
@@ -2170,7 +2172,9 @@ CONFIG_USB_EHCI_PCI=y
 # CONFIG_USB_ISP1362_HCD is not set
 # CONFIG_USB_FOTG210_HCD is not set
 # CONFIG_USB_MAX3421_HCD is not set
-# CONFIG_USB_OHCI_HCD is not set
+CONFIG_USB_OHCI_HCD=y
+CONFIG_USB_OHCI_HCD_PCI=y
+# CONFIG_USB_OHCI_HCD_PLATFORM is not set
 CONFIG_USB_UHCI_HCD=y
 # CONFIG_USB_SL811_HCD is not set
 # CONFIG_USB_R8A66597_HCD is not set
