nxp: ls: update ls series boards to kernel 4.9.95
Signed-off-by: Zhao Qiang <qiang.zhao@nxp.com>
Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/conf/kernel/4.9.95/linux.armv8a.config
+++ b/build-config/conf/kernel/4.9.95/linux.armv8a.config
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.77 Kernel Configuration
+# Linux/arm64 4.9.95 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -515,6 +515,8 @@ CONFIG_KEXEC=y
 CONFIG_XEN_DOM0=y
 CONFIG_XEN=y
 CONFIG_FORCE_MAX_ZONEORDER=11
+CONFIG_UNMAP_KERNEL_AT_EL0=y
+CONFIG_HARDEN_BRANCH_PREDICTOR=y
 # CONFIG_ARMV8_DEPRECATED is not set
 
 #
@@ -934,7 +936,7 @@ CONFIG_DNS_RESOLVER=y
 # CONFIG_NETLINK_DIAG is not set
 # CONFIG_MPLS is not set
 # CONFIG_HSR is not set
-# CONFIG_NET_SWITCHDEV is not set
+CONFIG_NET_SWITCHDEV=y
 # CONFIG_NET_L3_MASTER_DEV is not set
 # CONFIG_QRTR is not set
 # CONFIG_NET_NCSI is not set
@@ -1732,6 +1734,7 @@ CONFIG_RAVB=y
 CONFIG_NET_VENDOR_RDC=y
 # CONFIG_R6040 is not set
 CONFIG_NET_VENDOR_ROCKER=y
+# CONFIG_ROCKER is not set
 CONFIG_NET_VENDOR_SAMSUNG=y
 # CONFIG_SXGBE_ETH is not set
 CONFIG_NET_VENDOR_SEEQ=y
