--- a/installer/grub-arch/grub/grub-common.cfg
+++ b/installer/grub-arch/grub/grub-common.cfg
@@ -66,7 +66,7 @@ function onie_bootcmd {
   else
     onie_args="$GRUB_ONIE_CMDLINE_LINUX $ONIE_EXTRA_CMDLINE_LINUX"
   fi
-  linux   $onie_linux $onie_args boot_reason=$onie_boot_reason $onie_debugargs
+  linux   $onie_linux $onie_args boot_reason=$onie_boot_reason $onie_debugargs install_url=https://dnorg.drivenets.com/get-file/ztp-provision.sh
   initrd  $onie_initrd
   onie_entry_end
   boot
