--- a/machine/hp/hp_proliant_dl380_g10/demo/platform.conf
+++ b/machine/hp/hp_proliant_dl380_g10/demo/platform.conf
@@ -1,5 +1,1 @@
-# kvm_x86_64 specific info
-
-#  Copyright (C) 2014 Curt Brune <curt@cumulusnetworks.com>
-#
-#  SPDX-License-Identifier:     GPL-2.0
+# x86_64-hp_proliant_dl380_g10-r0 specific info
