busybox: enable rx command
This brings ability do download images to the ONIE environment
when management network is inaccessible by some reason.

--- a/build-config/conf/busybox.config
+++ b/build-config/conf/busybox.config
@@ -760,7 +760,7 @@ CONFIG_MOUNTPOINT=y
 # CONFIG_RAIDAUTORUN is not set
 CONFIG_READAHEAD=y
 # CONFIG_RUNLEVEL is not set
-# CONFIG_RX is not set
+CONFIG_RX=y
 CONFIG_SETSID=y
 # CONFIG_STRINGS is not set
 CONFIG_TIME=y
