Marvell a7020-comexp - add support for common CPU module
Signed-off-by: Gil Tabibian <gilt@marvell.com>

--- a/machine/marvell/a7020-comexp/kernel/config
+++ b/machine/marvell/a7020-comexp/kernel/config
@@ -1639,7 +1639,7 @@ CONFIG_NET_VENDOR_I825XX=y
 CONFIG_NET_VENDOR_MARVELL=y
 CONFIG_MVMDIO=y
 # CONFIG_MVNETA_BM is not set
-CONFIG_MVPP2=y
+CONFIG_MVPP2=n
 CONFIG_MVPP2X=y
 # CONFIG_PXA168_ETH is not set
 # CONFIG_SKGE is not set
