Pegatron common_bde: add platform to support ONIE
Add below model support into pegatron_common_bde:

1. Pegatron_fm_6256_bn_f:
   with Marvell Falcon 98CX8512 x1
   48x10GbE/25GbE SFP28 ports, and 8x40GbE/100GbE QSFP28 ports

The CPU is a Intel Broadwell-DE D1527

Other changeset added into this commit are:

- Supoort BIOS/UEFI bootcode
- Enhance main board detection
- Add I2C arbiter PCA9641 support

Signed-off-by: Wolf Lin <Wolf_Lin@pegatroncorp.com>
Signed-off-by: Max Lee <max_lee@pegatroncorp.com>
Signed-off-by: Alex Doyle <adoyle@cumulusnetworks.com>

--- a/machine/pegatron/pegatron_common_bde/kernel/config
+++ b/machine/pegatron/pegatron_common_bde/kernel/config
@@ -4,3 +4,5 @@ CONFIG_I2C_ISMT=y
 CONFIG_I2C_ISMT_BUS_100K=y
 # CONFIG_I2C_ISMT_BUS_400K is not set
 # CONFIG_I2C_ISMT_BUS_1000K is not set
+CONFIG_I2C_MUX_PCA9541=y
+CONFIG_GPIO_ICH=y
