--- a/machine/pegatron/pegatron_common_bde/kernel/config
+++ b/machine/pegatron/pegatron_common_bde/kernel/config
@@ -1,3 +1,6 @@
+CONFIG_IGB=m
+CONFIG_IGB_HWMON=y
+CONFIG_I2C_ALGOBIT=m
 CONFIG_I2C_I801=y
 CONFIG_I2C_ISMT=y
 # CONFIG_I2C_ISMT_BUS_80K is not set
@@ -6,3 +9,14 @@ CONFIG_I2C_ISMT_BUS_100K=y
 # CONFIG_I2C_ISMT_BUS_1000K is not set
 CONFIG_I2C_MUX_PCA9541=y
 CONFIG_GPIO_ICH=y
+CONFIG_ACPI_IPMI=y
+CONFIG_IPMI_HANDLER=y
+CONFIG_IPMI_PANIC_EVENT=y
+CONFIG_IPMI_PANIC_STRING=y
+CONFIG_IPMI_DEVICE_INTERFACE=y
+CONFIG_IPMI_SI=y
+# CONFIG_SENSORS_IBMAEM is not set
+# CONFIG_SENSORS_IBMPEX is not set
+# CONFIG_IPMI_SSIF is not set
+# CONFIG_IPMI_WATCHDOG is not set
+# CONFIG_IPMI_POWEROFF is not set
