--- a/machine/ufispace/ufispace_ncc/installer.conf
+++ b/machine/ufispace/ufispace_ncc/installer.conf
@@ -5,21 +5,12 @@
 #
 #  SPDX-License-Identifier:     GPL-2.0
 
-description="Dell, PowerEdge"
+description="ufispace, ncc"
 
 # Default ONIE block device
 install_device_platform()
 {
-    # SATA, SCSI, USB block device
-    if grep -q sda /proc/partitions ; then
-        echo /dev/sda
-        return 0
-    fi
-
-    echo "ERROR: Unable to determine install block device" > /dev/console
-    echo "Configure your VM to use a SATA controller for the hard disk" > /dev/console
-    echo /dev/sda
-
+    echo /dev/nvme0n1
 }
 
 # Local Variables:
