--- a/machine/hp/hp_proliant_g10/kernel/config
+++ b/machine/hp/hp_proliant_g10/kernel/config
@@ -1066,7 +1066,7 @@ CONFIG_VIRTIO_BLK=y
 # CONFIG_TIFM_CORE is not set
 # CONFIG_ICS932S401 is not set
 # CONFIG_ENCLOSURE_SERVICES is not set
-# CONFIG_HP_ILO is not set
+CONFIG_HP_ILO=y
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
 # CONFIG_ISL29020 is not set
@@ -1342,7 +1342,7 @@ CONFIG_DM_VERITY=y
 CONFIG_NETDEVICES=y
 CONFIG_MII=y
 CONFIG_NET_CORE=y
-# CONFIG_BONDING is not set
+CONFIG_BONDING=y
 CONFIG_DUMMY=y
 # CONFIG_EQUALIZER is not set
 # CONFIG_NET_FC is not set
