Set crosstool<arch>.config CT_LINUX_VERSION from makefile LINUX_VERSION
The new crosstool config for uclbc requires that the version of the
Linux kernel being built be set in a few places. This is a change
from how things used to build.

As a build target's machine.make file can set this value with the
variable LINUX_VERSION, the value cannot be hardcoded in to the
crosstool<arch>.config, but needs to be set at build time.

This change leaves the config file's:
CT_LINUX_VERSION
...values unconfigured until the xtools.make makefile fragment can
apply the kernel values to the crosstool<arch>.config file that has
been copied to the build area.

Tested with successful builds of the Mellanox ONIE (4.9.95 kernel)
and the KVM (4.19.143 kernel)

Signed-off-by: Alex Doyle <adoyle@nvidia.com>
Signed-off-by: Alex Doyle <alexddoyle@gmail.com>

--- a/build-config/conf/crosstool/gcc-8.3.0/uClibc-ng-1.0.35/crosstool.x86_64.config
+++ b/build-config/conf/crosstool/gcc-8.3.0/uClibc-ng-1.0.35/crosstool.x86_64.config
@@ -218,13 +218,18 @@ CT_KERNEL_LINUX_SHOW=y
 #
 # Options for linux
 #
+#  ONIE xtools.make will apply the value of LINUX_VERSION
+#  to set:
+#   CT_LINUX_VERSION a.b.c
+#   CT_LINUX_V_a_b=y
+#  Note this will require adding entries for newer kernels.
 CT_KERNEL_LINUX_PKG_KSYM="LINUX"
 CT_LINUX_DIR_NAME="linux"
 CT_LINUX_PKG_NAME="linux"
 CT_LINUX_SRC_RELEASE=y
 CT_LINUX_PATCH_ORDER="global"
-#CT_LINUX_V_4_20 is not set
-CT_LINUX_V_4_19=y
+# CT_LINUX_V_4_20 is not set
+# CT_LINUX_V_4_19 is not set
 # CT_LINUX_V_4_18 is not set
 # CT_LINUX_V_4_17 is not set
 # CT_LINUX_V_4_16 is not set
@@ -245,7 +250,7 @@ CT_LINUX_V_4_19=y
 # CT_LINUX_V_3_2 is not set
 # CT_LINUX_V_2_6_32 is not set
 # CT_LINUX_NO_VERSIONS is not set
-CT_LINUX_VERSION="4.19.143"
+CT_LINUX_VERSION="ONIE set by xtools.make"
 CT_LINUX_MIRRORS="$(CT_Mirrors kernel.org linux ${CT_LINUX_VERSION})"
 CT_LINUX_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_LINUX_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
