--- a/build-config/conf/crosstool/gcc-8.3.0/uClibc-ng-1.0.35/crosstool.x86_64.config
+++ b/build-config/conf/crosstool/gcc-8.3.0/uClibc-ng-1.0.35/crosstool.x86_64.config
@@ -69,7 +69,7 @@ CT_FORBID_DOWNLOAD=y
 # CT_FORCE_EXTRACT is not set
 CT_OVERRIDE_CONFIG_GUESS_SUB=y
 # CT_ONLY_EXTRACT is not set
-# ALEX CT_PATCH_BUNDLED=y
+CT_PATCH_BUNDLED=y
 # CT_PATCH_BUNDLED_LOCAL is not set
 CT_PATCH_ORDER="bundled,local"
 CT_PATCH_SINGLE=y
@@ -126,6 +126,12 @@ CT_ARCH_X86=y
 # CT_ARCH_XTENSA is not set
 CT_ARCH="x86"
 CT_ARCH_CHOICE_KSYM="X86"
+# CT_ARCH_ALPHA_EV4 is not set
+# CT_ARCH_ALPHA_EV45 is not set
+# CT_ARCH_ALPHA_EV5 is not set
+# CT_ARCH_ALPHA_EV56 is not set
+# CT_ARCH_ALPHA_EV6 is not set
+# CT_ARCH_ALPHA_EV67 is not set
 CT_ARCH_CPU=""
 CT_ARCH_TUNE=""
 CT_ARCH_X86_SHOW=y
@@ -307,8 +313,8 @@ CT_BINUTILS_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_BINUTILS_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz"
 CT_BINUTILS_SIGNATURE_FORMAT="packed/.sig"
-CT_BINUTILS_2_30_or_older=y
-CT_BINUTILS_older_than_2_30=y
+CT_BINUTILS_later_than_2_30=y
+CT_BINUTILS_2_30_or_later=y
 CT_BINUTILS_later_than_2_27=y
 CT_BINUTILS_2_27_or_later=y
 CT_BINUTILS_later_than_2_25=y
@@ -343,10 +349,29 @@ CT_ALL_BINUTILS_CHOICES="BINUTILS"
 # C-library
 #
 # CT_LIBC_GLIBC is not set
+# CT_LIBC_NEWLIB is not set
+# CT_LIBC_NONE is not set
 CT_LIBC_UCLIBC=y
 CT_LIBC="uClibc"
 CT_LIBC_CHOICE_KSYM="UCLIBC"
 CT_THREADS="nptl"
+# CT_GLIBC_USE_GNU is not set
+# CT_GLIBC_SRC_RELEASE is not set
+# CT_GLIBC_V_2_29 is not set
+# CT_GLIBC_V_2_28 is not set
+# CT_GLIBC_V_2_27 is not set
+# CT_GLIBC_V_2_26 is not set
+# CT_GLIBC_V_2_25 is not set
+# CT_GLIBC_V_2_24 is not set
+# CT_GLIBC_V_2_23 is not set
+# CT_GLIBC_V_2_19 is not set
+# CT_GLIBC_V_2_17 is not set
+# CT_GLIBC_V_2_12_1 is not set
+# CT_NEWLIB_USE_REDHAT is not set
+# CT_NEWLIB_SRC_RELEASE is not set
+# CT_NEWLIB_V_3_1 is not set
+# CT_NEWLIB_V_3_0 is not set
+# CT_NEWLIB_V_2_5 is not set
 CT_LIBC_UCLIBC_SHOW=y
 
 #
@@ -449,19 +474,18 @@ CT_GCC_SRC_RELEASE=y
 CT_GCC_PATCH_ORDER="global"
 CT_GCC_V_8=y
 # CT_GCC_V_7 is not set
-#CT_GCC_V_6=y
+# CT_GCC_V_6 is not set
 # CT_GCC_V_5 is not set
 # CT_GCC_V_4_9 is not set
 # CT_GCC_NO_VERSIONS is not set
-#CT_GCC_VERSION="6.5.0"
 CT_GCC_VERSION="8.3.0"
 CT_GCC_MIRRORS="$(CT_Mirrors GNU gcc/gcc-${CT_GCC_VERSION}) $(CT_Mirrors sourceware gcc/releases/gcc-${CT_GCC_VERSION})"
 CT_GCC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_GCC_ARCHIVE_FORMATS=".tar.xz .tar.gz"
 CT_GCC_SIGNATURE_FORMAT=""
-CT_GCC_7_or_older=y
-CT_GCC_older_than_7=y
+CT_GCC_later_than_7=y
+CT_GCC_7_or_later=y
 CT_GCC_later_than_6=y
 CT_GCC_6_or_later=y
 CT_GCC_later_than_5=y
@@ -672,20 +696,21 @@ CT_GMP_later_than_5_1_0=y
 CT_GMP_5_1_0_or_later=y
 CT_GMP_later_than_5_0_0=y
 CT_GMP_5_0_0_or_later=y
+CT_GMP_REQUIRE_5_0_0_or_later=y
 CT_COMP_LIBS_ISL=y
 CT_COMP_LIBS_ISL_PKG_KSYM="ISL"
 CT_ISL_DIR_NAME="isl"
 CT_ISL_PKG_NAME="isl"
 CT_ISL_SRC_RELEASE=y
 CT_ISL_PATCH_ORDER="global"
-# CT_ISL_V_0_20 is not set
+CT_ISL_V_0_20=y
 # CT_ISL_V_0_19 is not set
 # CT_ISL_V_0_18 is not set
 # CT_ISL_V_0_17 is not set
-CT_ISL_V_0_16=y
+# CT_ISL_V_0_16 is not set
 # CT_ISL_V_0_15 is not set
 # CT_ISL_NO_VERSIONS is not set
-CT_ISL_VERSION="0.16.1"
+CT_ISL_VERSION="0.20"
 CT_ISL_MIRRORS="http://isl.gforge.inria.fr"
 CT_ISL_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_ISL_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
@@ -737,36 +762,37 @@ CT_MPC_DIR_NAME="mpc"
 CT_MPC_PKG_NAME="mpc"
 CT_MPC_SRC_RELEASE=y
 CT_MPC_PATCH_ORDER="global"
-# CT_MPC_V_1_1 is not set
-CT_MPC_V_1_0=y
+CT_MPC_V_1_1=y
+# CT_MPC_V_1_0 is not set
 # CT_MPC_NO_VERSIONS is not set
-CT_MPC_VERSION="1.0.3"
+CT_MPC_VERSION="1.1.0"
 CT_MPC_MIRRORS="http://www.multiprecision.org/downloads $(CT_Mirrors GNU mpc)"
 CT_MPC_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPC_ARCHIVE_FORMATS=".tar.gz"
 CT_MPC_SIGNATURE_FORMAT="packed/.sig"
+CT_MPC_1_1_0_or_later=y
 CT_MPC_1_1_0_or_older=y
-CT_MPC_older_than_1_1_0=y
 CT_COMP_LIBS_MPFR=y
 CT_COMP_LIBS_MPFR_PKG_KSYM="MPFR"
 CT_MPFR_DIR_NAME="mpfr"
 CT_MPFR_PKG_NAME="mpfr"
 CT_MPFR_SRC_RELEASE=y
 CT_MPFR_PATCH_ORDER="global"
-CT_MPFR_V_3_1=y
+CT_MPFR_V_4_1=y
+# CT_MPFR_V_3_1 is not set
 # CT_MPFR_NO_VERSIONS is not set
-CT_MPFR_VERSION="3.1.6"
+CT_MPFR_VERSION="4.1.0"
 CT_MPFR_MIRRORS="http://www.mpfr.org/mpfr-${CT_MPFR_VERSION} $(CT_Mirrors GNU mpfr)"
 CT_MPFR_ARCHIVE_FILENAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_DIRNAME="@{pkg_name}-@{version}"
 CT_MPFR_ARCHIVE_FORMATS=".tar.xz .tar.bz2 .tar.gz .zip"
 CT_MPFR_SIGNATURE_FORMAT="packed/.asc"
-CT_MPFR_4_0_0_or_older=y
-CT_MPFR_older_than_4_0_0=y
-CT_MPFR_REQUIRE_older_than_4_0_0=y
+CT_MPFR_later_than_4_0_0=y
+CT_MPFR_4_0_0_or_later=y
 CT_MPFR_later_than_3_0_0=y
 CT_MPFR_3_0_0_or_later=y
+CT_MPFR_REQUIRE_3_0_0_or_later=y
 CT_COMP_LIBS_NCURSES=y
 CT_COMP_LIBS_NCURSES_PKG_KSYM="NCURSES"
 CT_NCURSES_DIR_NAME="ncurses"
