Add infrastructure for managing keys and signing.
This introduces makefile changes to clarify signing key uses.

As key management will be implemented on a per-vendor basis,
an ONIE build required some changes to cleanly support
unique key locations, and to provide a working example of this
using the kvm_x86_64 virtual machine.

The ./emulation directory provides a way to run a preconfigured
 kvm_x86_64 instance with a virtual USB drive to store files.

The ./encryption directory provides scripts to generate signing
 keys to demonstrate how a the keys from  hardware, software,
 and ONIE vendors can interact to create a valid Secure Boot
 configuration. It is integrated with the ./emulation directory
 structure so that it can replicate the experience of copying
 keys to be installed on a target's UEFI BIOS (via the virtual
 USB drive)

These changes integrate the aforementioned key management
 with the make system to:
 - Generate example keys.
 - Generate the self signed shim (if needed).
 - Clearly define which keys are getting used where.
 - Provide those keys to the emulated run time environment.

With that in mind, this introduces:

machine/kvm_x86_64/machine-security.make
 ...which is an example of how a machine specific makefile
 will contain all of the key paths and security settings
 for a build.
 It acts in a similar capacity to the machine.make file.
 NOTE: that the machine.make file defines:
  MACHINE_SECURITY_MAKEFILE
  ...which is the path to the security file to use.
  This can be overridden to distinguish between different
  build contexts, such as developer builds, and official
  releases.

build-config/make/signing-keys.make
 - Which will generate keys, and display the values of
   all Makefile variables used from the build target's
   machine-security.make file

The commit also updates Makefile, kernel.make, and shim.make
 to be aware of the variables set by the machine-security.make.

For example,

The signed shim is typically not part of the build

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -1,6 +1,7 @@
 #-------------------------------------------------------------------------------
 #>
-#
+#  Copyright (C) 2021 Alex Doyle <adoyle@nvidia.com>
+#  Copyright (C) 2021 Andriy Dobush <andriyd@nvidia.com>
 #  Copyright (C) 2013,2014,2015,2016,2017 Curt Brune <curt@cumulusnetworks.com>
 #  Copyright (C) 2014,2015 Carlos Cardenas <carlos@cumulusnetworks.com>
 #  Copyright (C) 2014,2017 david_yang <david_yang@accton.com>
@@ -344,12 +345,13 @@ ONIE_MIRROR	?= http://mirror.opencompute.org/onie
 
 # By default do not enable secure boot
 SECURE_BOOT_ENABLE ?= no
+
 ifeq ($(SECURE_BOOT_ENABLE),yes)
+  SHIM_ENABLE = yes
   PESIGN_ENABLE = yes
   GNU_EFI_ENABLE = yes
   OPENSSL_ENABLE = yes
   MOKUTIL_ENABLE = yes
-  SHIM_ENABLE = yes
   KEYUTILS_ENABLE = yes
 endif
 
@@ -438,12 +440,31 @@ endif
 ifeq ($(MOKUTIL_ENABLE),yes)
   include make/mokutil.make
 endif
-ifeq ($(SHIM_ENABLE),yes)
-  include make/shim.make
-endif
+
 ifeq ($(KEYUTILS_ENABLE),yes)
   include make/keyutils.make
 endif
+
+ifeq ($(SECURE_BOOT_ENABLE),yes)
+# Makefile to handle signing keys and security
+  include make/signing-keys.make
+
+# Machine specific makefile that details:
+#  Key locations
+#  Security configuration details
+# This defaults to the machine's machine-security.make,
+#  but anither configuration can be specified, for
+# doing developer or release builds.
+  include $(MACHINE_SECURITY_MAKEFILE)
+
+endif
+
+# Note that the Shim include must follow the machine-security.make
+#  as it has definitions that shim will use.
+ifeq ($(SHIM_ENABLE),yes)
+  include make/shim.make
+endif
+
 include make/images.make
 include make/demo.make
 
