--- a/machine/kvm_x86_64/kernel/config
+++ b/machine/kvm_x86_64/kernel/config
@@ -80,13 +80,18 @@ CONFIG_CRYPTO_DEV_VIRTIO=m
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_X509_CERTIFICATE_PARSER=y
+CONFIG_PKCS8_PRIVATE_KEY_PARSER=y
 CONFIG_PKCS8_MESSAGE_PARSER=y
+# CONFIG_PKCS8_PRIVATE_KEY_PARSER is not set
+CONFIG_PKCS7_MESSAGE_PARSER=y
 # CONFIG_PKCS7_TEST_KEY is not set
 CONFIG_SIGNED_PE_FILE_VERIFICATION=y
-CONFIG_MODULE_SIG_KEY="onie-vendor-SHIM-cert.pem"
+CONFIG_MODULE_SIG_KEY="ONIE-shim-key-cert.pem"
 CONFIG_SYSTEM_TRUSTED_KEYRING=y
 CONFIG_SYSTEM_TRUSTED_KEYS=""
 # CONFIG_SYSTEM_EXTRA_CERTIFICATE is not set
 # CONFIG_SECONDARY_TRUSTED_KEYRING is not set
 CONFIG_CLZ_TAB=y
 CONFIG_MPILIB=y
+CONFIG_CRYPTO_HW=y
+
